@startuml

' avoid problems with angled crows feet
skinparam linetype polyline
skinparam linetype ortho
left to right direction

entity "BI_dimension_tiempos" {
    *tiempo_id: INT <<generated>>
    --
    mes: INT
    cuatrimestre: INT
    anio: INT
}

entity "BI_dimension_ubicaciones" {
    *ubicacion_id: INT <<generated>>
    --
    localidad_descripcion: NVARCHAR(255)
    provincia_descripcion: NVARCHAR(255)
}

entity "BI_dimension_rangos_edades" {
    *rango_id: INT <<generated>>
    --
    rango_descripcion: NVARCHAR(255)
}

entity "BI_dimension_turnos" {
    *turno_id: INT <<generated>>
    --
    turno_descripcion: NVARCHAR(255)
}

entity "BI_dimension_tipo_material" {
    *tipo_id: INT <<generated>>
    --
    tipo_descripcion: NVARCHAR(255)
}

entity "BI_dimension_modelo_sillon" {
    *modelo_id: INT <<generated>>
    --
    modelo: NVARCHAR(255)
    modelo_codigo: BIGINT
    modelo_descripcion: NVARCHAR(255)
}

entity "BI_dimension_estado_pedido" {
    *estado_id: INT <<generated>>
    --
    estado_descripcion: NVARCHAR(255)
}

entity "BI_hechos_pedidos" {
    *pedido_id: DECIMAL (18, 0) <<generated>>
    --
    numero: DECIMAL (18, 0)
    *tiempo_id: INT
    *sillon_modelo: INT
    *turno: INT
    sucursal_numero: BIGINT
    *estado: INT
}

entity "BI_hechos_facturacion" {
    *facturacion_id: DECIMAL (18, 0) <<generated>>
    --
    *tiempo_id: INT
    dias_desde_pedido_a_factura: INT,
    sucursal_numero: BIGINT
    *ubicacion_id: INT
    *rango_etario_cliente: INT
    *sillon_modelo: INT
    cantidad_unidades: BIGINT
    total_facturacion: DECIMAL (18, 2)
}

entity "BI_hechos_compras" {
    *compras_id: DECIMAL (18, 0) <<generated>>
    --
    *tiempo_id: INT
    sucursal_numero: BIGINT
    *ubicacion_id: INT
    *tipo_material: INT
    cantidad: BIGINT
    total_compra: DECIMAL (18, 2)
}

entity "BI_hechos_envios" {
    *envio_id: DECIMAL(18,2) <<generated>>
    --
    *tiempo_id INT
    *ubicacion_id INT
    *estado_envio INT
    envio_fecha_programada DATETIME2(2)
    envio_fecha_entrega DATETIME2(2)
    costo DECIMAL(18,2)
}

BI_hechos_pedidos ||-u-|| BI_dimension_tiempos
BI_hechos_pedidos ||--|| BI_dimension_turnos
BI_hechos_pedidos ||-u-|| BI_dimension_modelo_sillon
BI_hechos_pedidos ||--|| BI_dimension_estado_pedido
BI_hechos_facturacion ||-u-|| BI_dimension_tiempos
BI_hechos_facturacion ||--|| BI_dimension_ubicaciones
BI_hechos_facturacion ||-u-|| BI_dimension_rangos_edades
BI_hechos_facturacion ||-u-|| BI_dimension_modelo_sillon
BI_hechos_compras ||-u-|| BI_dimension_tiempos
BI_hechos_compras ||--|| BI_dimension_ubicaciones
BI_hechos_compras ||--|| BI_dimension_tipo_material
BI_hechos_envios ||-u-|| BI_dimension_tiempos
BI_hechos_envios ||--|| BI_dimension_ubicaciones

@enduml
